# SPATULA

./: .gitignore  PROJECT_GUIDE_KR.md  README.md  pyproject.toml
assets/: human_list.txt
configs/eval/: stage2_downstream.yaml
configs/experiments/: barlow.yaml  cca.yaml  clip.yaml  jepa.yaml  s2l.yaml
configs/stage1/: README.md  data.yaml  experiment.yaml  experiment_main.yaml  model.yaml  model_main.yaml  train.yaml
configs/stage15/: data.yaml  experiment.yaml  model.yaml  train.yaml
configs/sweep/: smoke.yaml  stage1_ours_tx.yaml  stage2_align.yaml
docs/: refactor_inventory.md  tmp_result_0624.md
docs/design/: 0_summary_spot_encoder_system_kr.md  1_vocab_and_input_encoding_kr.md  2_stage1_objectives_kr.md  3_augmentation_and_sampling_kr.md  4_stage15_spatial_adaptation_kr.md  5_stage2_multimodal_alignment_kr.md  6_ablation_and_evaluation_kr.md  7_eval.md  spot_encoder_stage1_stage15_kr.md  stage15_spatial_jepa.md  stage1_multi_chunk_jepa_flow.md  stage1_validation_metrics_kr.md  stage2_downstream_and_ablation.md  training_and_ablation.md  vocab.md
docs/reports/: final_result_report_kr.md  research_progress_report_kr.md
docs/strategy/: roadmap.md
scripts/: run_all.sh  run_experiments.sh  run_spot_encoder_pipeline.py  sweep.py  train.py
scripts/ablation/: README.md  _common.sh  probe_stage1_batch.py  run_all.sh  run_all_stage1.sh  run_all_stage15.sh  run_all_stage1_chunk_stage15.sh  run_jepa.sh  run_mask_ratio.sh  run_normalize.sh  run_objective.sh  run_region_agg.sh  run_region_token.sh  run_seq_sampling.sh  run_sources.sh  run_spot_encoder_pipeline.sh  run_stage15_cascade.sh  run_value_aug.sh  run_vocab_clip.sh
scripts/data/: audit_gene_symbols.py  build_predefined_vocab.py  dataset_eda.py  extract_region_uni_feat.py  make_clipped_vocab.py  prepare.py  prepare_external_validation.py  refresh_gene_stats.py  resplit.py  (+1 more)
(+103 files in other folders)
